--- a/style.css
+++ b/style.css
@@ -91,25 +91,26 @@ input.headerBar:checked + .labelBar .bar3{
     align-items: center;
     text-transform: capitalize;
     font-family: 'Montserrat', sans-serif;
+    line-height: 1.4;
 }
 .midText h2{
-    font-size: 3em;
-    font-weight: bolder;
+    font-size: 3.5rem;
+    font-weight: 700;
 }
 .midText p{
-    font-size: 2.3em;
+    font-size: 2.5rem;
     font-family: 'Montserrat', sans-serif;
-    font-weight: lighter;
+    font-weight: 300;
 }
 .midText span{
     font-weight: 500;
 }
-.midText ::selection{
+header ::selection{
     background-color: white;
     color:black;
 }
 .icons{
-    margin-top: 10px;
+    margin-top: 1.1rem;
     display: flex;
     align-items: center;
 }
@@ -131,14 +132,16 @@ input.headerBar:checked + .labelBar .bar3{
 .about{
     display: flex;
     flex-direction: column;
+    align-items: center;
     padding: 45px 20px;
 }
 .aboutImages{
     display: flex;
-    align-items: flex-end;
+    align-items: center;
     justify-content: center;
     position: relative;
     padding: 20px 0px;
+    max-width: 450px;
 }
 img.me_irl{
     width: 85%;
@@ -146,6 +149,7 @@ img.me_irl{
 img.dots{
     width: 85%;
     height: 93%;
+    bottom: -1%;
     left: 0;
     position: absolute;
     z-index: -1;
@@ -154,24 +158,27 @@ img.dots{
     width: 85%;
     height: 93%;
     position: absolute;
-    background-color: rgb(190, 190, 190, 0.3);
+    background-color: rgba(114,36,58,0.5);
     z-index: -2;
     right: 0;
-    bottom: 70px;
+    top: -1%;
 }
 .content{
+    max-width: 650px;
+    margin-top: 30px;
     display: flex;
     flex-direction: column;
 }
 .content h1{
     font-family: 'Lato', sans-serif;
-    font-size: 2em;
+    font-size: 2rem;
+    font-weight: 700;
 }
 .content p{
     font-family: 'Montserrat', sans-serif;
     padding-top: 10px;
     font-weight: 500;
-    font-size: 0.95em;
+    font-size: 1rem;
     line-height: 1.4;
     margin-bottom: 30px;
 }
@@ -179,22 +186,28 @@ img.dots{
     font-weight: 600;
 }
 p.role{
-    font-family: 'Montserrat', sans-serif;
     padding-top: 2px;
     margin-bottom: 0px;
-    font-size: 1.1em;
-    font-weight: 400;
+    font-size: 1.1rem;
+    font-weight: 300;
+}
+.skills{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .skillBar{
     font-family: 'Lato', sans-serif;
+    max-width: 600px;
+    width: 82vw;
     border-radius: 6px;
     color: white;
     margin-bottom: 30px;
     box-shadow: inset 0px 0px 10px rgba(0,0,0,0.3);
 }
 .black{
-    padding: 6px;
-    background-color: black;
+    padding: 4px 10px;
+    background-color: #1c1c1c;
     display: flex;
     justify-content: space-between;
     border-radius: 6px;
@@ -217,11 +230,323 @@ p.role{
 .java::after{
     content: '75%';
 }
+.contentWrapper{
+    display: flex;
+    flex-direction: column;
+}
+
+/* Portfolio Section */
+.portfolio{
+    background-color: rgb(246,246,246);
+    padding: 50px 0px;
+}
+.portfolioImages{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.portfolio h1{
+    font-weight: 800;
+    margin-bottom: 50px;
+    font-family: 'Lato', sans-serif;
+    font-size: 2rem;
+    text-align: center;
+}
+.portfoliocard img{
+    width: 100%;
+    border-radius: 6px;
+    transition: 0.35s;
+}
+.portfoliocard{
+    position: relative;
+    margin-bottom: 20px;
+    width: 80vw;
+}
+.portfolioHoverStuff{
+    position: absolute;
+    top: 5px;
+    bottom: 9px;
+    left: 5px;
+    right: 5px;
+    gap: 6px;
+    background-color: rgba(240, 240, 240, 0.9);
+    border-radius: 3px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: 0.35s;
+}
+.portfolioHoverStuff p{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 0.9rem;
+    transform: translateY(-100%);
+    transition: 0.35s;
+}
+.portfolioHoverIcons{
+    display: flex;
+    gap: 8px;
+}
+.faIcons::before{
+    display: inline-block;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+}
+.icon1::before{
+    content: "\f0ac";
+    font: var(--fa-font-solid);
+    color: black;
+}
+.icon2::before{
+    content: "\f121";
+    font: var(--fa-font-solid);
+    color: black;
+}
+.hoverIcons{
+    transform: translateY(100%);
+    transition: 0.35s;
+}
+.portfoliocard:hover .portfolioHoverStuff{
+    opacity: 1;
+}
+.portfoliocard:hover p{
+    transform: translateY(0);
+}
+.portfoliocard:hover .hoverIcons{
+    transform: translateY(0);
+}
+.portfolioHoverIcons a:hover .icon1::before{
+    color: rgba(0,0,0,0.6);
+}
+.portfolioHoverIcons a:hover .icon2::before{
+    color: rgba(0,0,0,0.6);
+}
+
+/* Contact Section */
+.Contact{
+    padding: 50px 0px;
+}
+.Contact h1{
+    font-family: 'Lato', sans-serif;
+    font-size: 2rem;
+    text-align: center;
+    font-weight: 800;
+    margin-bottom: 40px;
+}
+.contactIcons{
+    display: flex;
+    flex-direction: column;
+    font-family: 'Montserrat', sans-serif;
+    justify-content: center;
+    font-weight: 500;
+    align-items: center;
+    gap: 25px;
+}
+.contactSingleIcon{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+}
+.contactSingleIcon::before{
+    transition: .35s;
+}
+.contactSingleIcon p:last-child{
+    font-weight: 300;
+    color: rgba(0,0,0,0.6);
+}
+.addressIcon::before{
+    font: var(--fa-font-solid);
+    content: "\f5a0";
+    color: black;
+    background-color: rgba(240, 240, 240, 0.9);
+    padding: 10px;
+    border-radius: 50%;
+}
+.iconInfo:hover .contactSingleIcon::before{
+    color: white;
+    background-color: black;
+}
+.emailIcon::before{
+    font: var(--fa-font-solid);
+    content: "\f0e0";
+    color: black;
+    background-color: rgba(240, 240, 240, 0.9);
+    padding: 10px;
+    border-radius: 50%;
+}
+.emailIcon a{
+    text-decoration: none;
+    color: rgba(0,0,0,0.6);
+    font-weight: 300;
+}
+.phoneIcon::before{
+    font: var(--fa-font-solid);
+    content: "\f095";
+    color: black;
+    background-color: rgba(240, 240, 240, 0.9);
+    padding: 10px;
+    border-radius: 50%;
+}
+.Contact form{
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 18px;
+}
+.Contact input, textarea{
+    width: 90%;
+    padding: 12px 8px;
+    border-radius: 5px;
+    background-color: rgba(240, 240, 240, 0.9);
+    font-family: 'Montserrat', sans-serif;
+    border: none;
+    transition: .35s;
+}
+.Contact textarea{
+    height: 140px;
+    padding: 8px;
+}
+.Contact input:hover{
+    background-color: rgba(240, 240, 240, 0.6);
+}
+.Contact textarea:hover{
+    background-color: rgba(240, 240, 240, 0.6);
+}
+.Contact input[type="submit"]{
+    font-family: 'Montserrat', sans-serif;
+    background-color: black;
+    color: white;
+    border: none;
+    width: fit-content;
+    padding: 9px 30px;
+    border-radius: 6px;
+    transition: .35s;
+    border: 1px solid;
+}
+.Contact input[type="submit"]:hover{
+    background-color: white;
+    color: black;
+}
 
 
 
-@media screen and (min-width: 1024px) {
+
+
+
+
+
+
+@media screen and (min-width: 768px) {
     header{
         background-image: url("pc.jpg");
+    }
+    .icons img{
+        width: 27px;
+    }
+    .icons img.twitter{
+        width: 22px;
+    }
+    .icons img.meta{
+        width: 32px;
+    }
+    .icons a{
+        padding-right: 12px;
+    }
+    .labelBar{
+        display: none;
+    }
+    .navLinks{
+        position: static;
+        width: auto;
+        overflow: visible;
+    }
+    .navLinks ul{
+        display: flex;
+        width: auto;
+        transform: translateY(0);
+        background-color: transparent;
+    }
+    .navLinks a{
+        color: white;
+    }
+    .navLinks li{
+        padding: 0px;
+    }
+    .topBar > a{
+        padding: 20px 15px;
+    }
+    .portfolioImages{
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    .portfoliocard{
+        width: 43%;
+        margin: 20px;
+        max-width: 370px;
+    }
+    .portfolioHoverStuff{
+        max-width: 370px;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .topBar a{
+        margin: 20px 10px;
+        font-size: 19px;
+    }
+    .navlinks a{
+        margin: 0px;
+    }
+    .topBar > a{
+        margin-left:25px;
+        font-size: 23px;
+    }
+    .midText{
+        height: 42%;
+    }
+    .about{
+        gap: 50px;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+    .skillBar:last-child{
+        margin-bottom: 0px;
+    }
+    .content{
+        margin-top: 0px;
+    }
+    .content p{
+        line-height: 1.4;
+        font-size: 1.2em;
+    }
+    .content h1{
+        font-size: 2.2em;
+    }
+    .contentWrapper{
+        flex-direction: column;
+        margin: 50px 0px;
+        /* border: 1px solid; */
+    }
+    .aboutImages{
+        max-width: 360px;
+        padding-left: 30px;
+        /* border: 1px solid; */
+    }
+    .portfolioImages{
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    .portfoliocard{
+        width: 28%;
+        margin: 20px;
+        max-width: 430px;
+    }
+    .portfolioHoverStuff{
+        max-width: 430px;
     }
 }
