--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ header{
     transition: .6s;
 }
 .navLinks li{
+    position: relative;
     padding: 10px;
 }
 .navLinks a{
@@ -59,8 +60,17 @@ header{
     text-decoration: none;
     font-family: 'Montserrat', sans-serif;
 }
-.navLinks a:hover{
-    text-decoration: underline;
+.navLinks a::after{
+    content: '';
+    width: 0%;
+    height: 2px;
+    display: block;
+    position: absolute;
+    background-color: white;
+    transition: .35s;
+}
+.navLinks a:hover::after{
+    width: 100%;
 }
 input.headerBar{
     display: none;
@@ -112,19 +122,36 @@ header ::selection{
 .icons{
     margin-top: 1.1rem;
     display: flex;
+    gap: 9px;
     align-items: center;
 }
-.icons img{
-    width: 23px;
-}
-.icons img.twitter{
-    width: 18px;
-}
-.icons img.meta{
-    width: 28px;
-}
 .icons a{
-    padding-right: 10px;
+    text-decoration: none;
+}
+a.linkedin::after{
+    content: '\f0e1';
+}
+a.x::after{
+    content: '\e61b';
+}
+a.github::after{
+    content: '\f09b';
+}
+a.telegram::after{
+    content: '\f2c6';
+}
+a.insta::after{
+    content: '\f16d';
+}
+a.headerIcon::after{
+    font: var(--fa-font-brands);
+    color: white;
+}
+a.headerIcon::after{
+    font-size: 20px;
+}
+a.headerIcon:hover::after{
+    color: rgba(255,255,255,0.7);
 }
 
 /* About Section */
@@ -158,7 +185,7 @@ img.dots{
     width: 85%;
     height: 93%;
     position: absolute;
-    background-color: rgba(114,36,58,0.5);
+    background-color: rgba(115,37,59, 0.3);
     z-index: -2;
     right: 0;
     top: -1%;
@@ -236,6 +263,7 @@ p.role{
 }
 
 /* Portfolio Section */
+
 .portfolio{
     background-color: rgb(246,246,246);
     padding: 50px 0px;
@@ -326,8 +354,15 @@ p.role{
 }
 
 /* Contact Section */
+.ContactSect{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .Contact{
     padding: 50px 0px;
+    width: 90%;
+    /* border: 1px solid; */
 }
 .Contact h1{
     font-family: 'Lato', sans-serif;
@@ -396,10 +431,10 @@ p.role{
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 18px;
+    gap: 20px;
 }
 .Contact input, textarea{
-    width: 90%;
+    width: 100%;
     padding: 12px 8px;
     border-radius: 5px;
     background-color: rgba(240, 240, 240, 0.9);
@@ -408,7 +443,7 @@ p.role{
     transition: .35s;
 }
 .Contact textarea{
-    height: 140px;
+    height: 160px;
     padding: 8px;
 }
 .Contact input:hover{
@@ -427,19 +462,29 @@ p.role{
     border-radius: 6px;
     transition: .35s;
     border: 1px solid;
+    align-self: flex-start;
 }
 .Contact input[type="submit"]:hover{
     background-color: white;
     color: black;
 }
 
+/* Footer */
 
+footer{
+    background-color: black;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+footer p{
+    color: rgba(255,255,255,0.7);
+    font-size: 1.1em;
+    font-family: 'Lato', sans-serif;
+}
 
-
-
-
-
-
+/* Different layouts */
 
 @media screen and (min-width: 768px) {
     header{
@@ -492,9 +537,6 @@ p.role{
     .portfolioHoverStuff{
         max-width: 370px;
     }
-    .Contact input, textarea{
-        max-width: 900px;
-    }
 }
 
 @media screen and (min-width: 1024px) {
@@ -534,12 +576,10 @@ p.role{
     .contentWrapper{
         flex-direction: column;
         margin: 50px 0px;
-        /* border: 1px solid; */
     }
     .aboutImages{
         max-width: 360px;
         padding-left: 30px;
-        /* border: 1px solid; */
     }
     .portfolioImages{
         flex-direction: row;
@@ -559,6 +599,17 @@ p.role{
     }
     .iconInfo{
         max-width: 250px;
+        flex-grow: 1;
+    }
+    .Contact{
+        max-width: 900px;
+    }
+    .Contact form{
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    .contactForm input[type="text"], input[type="email"]{
+        width: 48%;
         flex-grow: 1;
     }
 }
