--- a/style.css
+++ b/style.css
@@ -477,6 +477,7 @@ footer{
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 footer p{
     color: rgba(255,255,255,0.7);
