--- a/style.css
+++ b/style.css
@@ -413,7 +413,7 @@ p.role{
     padding: 10px;
     border-radius: 50%;
 }
-.emailIcon a{
+.iconInfo a{
     text-decoration: none;
     color: rgba(0,0,0,0.6);
     font-weight: 300;
