--- a/style.css
+++ b/style.css
@@ -267,7 +267,11 @@ p.role{
 
 .portfolio{
     background-color: rgb(238, 238, 238);
-    padding: 50px 0px;
+    padding: 40px 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 .portfolioImages{
     display: flex;
@@ -584,9 +588,6 @@ footer p{
         max-width: 360px;
         padding-left: 30px;
     }
-    .portfolio{
-        height: 95vh;
-    }
     .portfolio h1{
         font-size: 2.4rem;
     }
@@ -624,5 +625,13 @@ footer p{
     .contactForm input[type="text"], input[type="email"]{
         width: 48%;
         flex-grow: 1;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .portfolio{
+        height: 95vh;
+        align-items: center;
+        padding: 0px;
     }
 }
