--- a/style.css
+++ b/style.css
@@ -715,7 +715,10 @@ footer p{
         padding-left: 30px;
     }
     .portfolio h1{
-        font-size: 2.4rem;
+        font-size: 2.2rem;
+    }
+    .testimonials-section h1{
+        font-size: 2.2rem;
     }
     .portfolioImages{
         flex-direction: row;
