--- a/style.css
+++ b/style.css
@@ -770,8 +770,14 @@ footer p{
 
 @media screen and (min-width: 1200px) {
     .portfolio{
-        height: 95vh;
+        /* height: 95vh; */
         align-items: center;
         padding: 0px;
+    }
+    .portfolio h1{
+        margin-top: 50px;
+    }
+    .portfolioImages{
+        padding-bottom: 50px;
     }
 }
